--- a/package.json
+++ b/package.json
@@ -5,5 +5,17 @@
   "main": "index.js",
   "repository": "https://github.com/mhoyer/angular-webpack-aot-lazy-i18n",
   "author": "Marcel Hoyer <mhoyer@pixelplastic.de>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
+    "rxjs": "^5.0.1",
+    "zone.js": "^0.8.4"
+  }
 }
