--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "@angular/router": "^4.4.6",
     "rxjs": "^5.0.1",
     "zone.js": "^0.8.4"
+  },
+  "devDependencies": {
+    "@angular/compiler-cli": "^4.4.6",
+    "@ngtools/webpack": "^1.9.4",
+    "html-webpack-plugin": "^2.30.1",
+    "typescript": "^2.1.5",
+    "webpack": "^3.10.0"
   }
 }
