--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "html-webpack-plugin": "^2.30.1",
     "typescript": "^2.1.5",
     "webpack": "^3.10.0"
+  },
+  "scripts": {
+    "build": "webpack --progress"
   }
 }
